--- a/BasicCalculator/Base.lproj/Main.storyboard
+++ b/BasicCalculator/Base.lproj/Main.storyboard
@@ -1,24 +1,116 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BasicCalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yz0-wT-mIN">
+                                <rect key="frame" x="97" y="90" width="198" height="34"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="ZVF-Dk-YJh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IgK-0J-9nA">
+                                <rect key="frame" x="97" y="176" width="198" height="34"/>
+                                <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="m8f-QA-YGq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cGO-CL-0Pm">
+                                <rect key="frame" x="77" y="259" width="35" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="+"/>
+                                <connections>
+                                    <action selector="add:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fsN-wP-voI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fqd-2Y-K8c">
+                                <rect key="frame" x="148" y="259" width="32" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="-"/>
+                                <connections>
+                                    <action selector="subtract:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hv5-Fx-LTH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MwE-un-Da4">
+                                <rect key="frame" x="220" y="259" width="33" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="x"/>
+                                <connections>
+                                    <action selector="multiply:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aUX-iJ-AIk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cji-Pw-giX">
+                                <rect key="frame" x="284" y="259" width="29" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="/"/>
+                                <connections>
+                                    <action selector="divide:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rWs-Zx-Ps8"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Result..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lqv-L4-kLo">
+                                <rect key="frame" x="87" y="331" width="218" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Yz0-wT-mIN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1MJ-kx-HBQ"/>
+                            <constraint firstItem="Fqd-2Y-K8c" firstAttribute="baseline" secondItem="MwE-un-Da4" secondAttribute="baseline" id="1bF-te-YcM"/>
+                            <constraint firstItem="Yz0-wT-mIN" firstAttribute="leading" secondItem="IgK-0J-9nA" secondAttribute="leading" id="544-9f-Meq"/>
+                            <constraint firstItem="cGO-CL-0Pm" firstAttribute="baseline" secondItem="Fqd-2Y-K8c" secondAttribute="baseline" id="7WB-vV-7lv"/>
+                            <constraint firstItem="lqv-L4-kLo" firstAttribute="top" secondItem="cGO-CL-0Pm" secondAttribute="bottom" constant="40" id="8sj-Cf-hIR"/>
+                            <constraint firstItem="Yz0-wT-mIN" firstAttribute="trailing" secondItem="IgK-0J-9nA" secondAttribute="trailing" id="9b7-2S-udy"/>
+                            <constraint firstItem="Yz0-wT-mIN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="31" id="Ah6-r1-81O"/>
+                            <constraint firstItem="cGO-CL-0Pm" firstAttribute="leading" secondItem="lqv-L4-kLo" secondAttribute="leading" id="Ghv-u7-zlF"/>
+                            <constraint firstItem="IgK-0J-9nA" firstAttribute="top" secondItem="Yz0-wT-mIN" secondAttribute="bottom" constant="52" id="IXN-cr-XaH"/>
+                            <constraint firstItem="MwE-un-Da4" firstAttribute="baseline" secondItem="Cji-Pw-giX" secondAttribute="baseline" id="V5g-K3-Yg6"/>
+                            <constraint firstItem="Fqd-2Y-K8c" firstAttribute="leading" secondItem="cGO-CL-0Pm" secondAttribute="trailing" constant="36" id="XBk-op-Xu3"/>
+                            <constraint firstItem="IgK-0J-9nA" firstAttribute="trailing" secondItem="lqv-L4-kLo" secondAttribute="trailing" id="Zcr-NX-9IQ"/>
+                            <constraint firstItem="Yz0-wT-mIN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="97" id="b1z-6j-yHk"/>
+                            <constraint firstItem="Fqd-2Y-K8c" firstAttribute="baseline" secondItem="cGO-CL-0Pm" secondAttribute="firstBaseline" id="drd-dw-Luf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lqv-L4-kLo" secondAttribute="bottom" constant="445" id="duW-ga-GX2"/>
+                            <constraint firstItem="Cji-Pw-giX" firstAttribute="leading" secondItem="MwE-un-Da4" secondAttribute="trailing" constant="31" id="mbk-EN-fRd"/>
+                            <constraint firstItem="MwE-un-Da4" firstAttribute="leading" secondItem="Fqd-2Y-K8c" secondAttribute="trailing" constant="40" id="ogG-VM-uqV"/>
+                            <constraint firstItem="cGO-CL-0Pm" firstAttribute="top" secondItem="IgK-0J-9nA" secondAttribute="bottom" constant="49" id="tiY-9k-jCz"/>
+                            <constraint firstItem="cGO-CL-0Pm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="77" id="uj6-9t-eib"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="firstInput" destination="Yz0-wT-mIN" id="5Wh-If-1s5"/>
+                        <outlet property="result" destination="lqv-L4-kLo" id="ANm-Y8-ZkF"/>
+                        <outlet property="secondInput" destination="IgK-0J-9nA" id="J7I-cS-woq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="135.1145038167939" y="4.9295774647887329"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
